<resources>

    //LogIn_SignUp Strings
    //Start Up Page


    <string name="app_name">Zuccstagram_SignUp</string>
    <string name="sharedPreferences_Profile">sharedPreferences_Profile</string>
    <string name="sharedPreferences_Other">sharedPreferences_Other</string>

    <string name="logInButton">Log In</string>
    <string name="signUpButton">Sign Up</string>

    <string name="textView_Email">Email :</string>
    <string name="editText_hint_Email">Zuccstagram@gmail.com</string>
    <string name="editText_Email"></string>

    <string name="textView_Password">Password :</string>
    <string name="editText_hint_Password">*********</string>
    <string name="editText_Password"></string>

    <string name="textView_title_Zuccstagram">Zuccstagram</string>

    //Reset Password
    <string name="textView_ResetPassword">A resetting email will be sent to the \nemail address provide.</string>
    <string name="textView_Hint_ResetPassword">example@gmail.com</string>
    <string name="textView_Email_ResetPassword">Email: </string>
    <string name="Button_Email_ResetPassword">Send Email</string>
    <string name="textView_ForgotPassword">Forgot Password</string>

    //Sign Up Page P1

    <string name="nextButton_P1">Next</string>

    <string name="textView_FirstName_P1">First Name :</string>
    <string name="editText_hint_FirstName_P1">Steve</string>
    <string name="editText_FirstName_P1"></string>

    <string name="textView_LastName_P1">Last Name :</string>
    <string name="editText_hint_LastName_P1">Smith</string>
    <string name="editText_LastName_P1"></string>

    <string name="textView_Email_P1">Email :</string>
    <string name="editText_hint_Email_P1">Zuccstagram@gmail.com</string>
    <string name="editText_Email_P1"></string>

    <string name="textView_Email_Confirmation_P1">Confirm email :</string>
    <string name="editText_hint_Email_Confirmation_P1">Zuccstagram@gmail.com</string>
    <string name="editText_Email_Confirmation_P1"></string>


    //Sign Up Page P2

    <string name="nextButton_P2">Next</string>

    <string name="textView_UserName_P2">Username :</string>
    <string name="editText_hint_UserName_P2">Zuccstaaa_11</string>
    <string name="editText_UserName_P2"></string>

    <string name="textView_Bio_P2">Bio :</string>
    <string name="editText_hint_Bio_P2">One for All \nAnd all For Zuccst</string>
    <string name="editText_Bio_P2"></string>

    <string name="textView_Password_P2">Password :</string>
    <string name="editText_hint_Password_P2">****</string>
    <string name="editText_Password_P2"></string>

    <string name="textView_Password_Confirmation_P2">Confirm Password :</string>
    <string name="editText_hint_Password_Confirmation_P2">****</string>
    <string name="editText_Password_Confirmation_P2"></string>


    //Sign Up Page P3

    <string name="nextButton_P3">Next</string>

    <string name="textView_SecurityQuestion_P3">Security Question :</string>
    <string name="editText_hint_SecurityQuestion_P3">When did you graduate High school ?</string>
    <string name="editText_SecurityQuestion_P3"></string>

    <string name="textView_SecurityQuestion_Answer_P3">Answer :</string>
    <string name="editText_SecurityQuestion_Answer_P3"></string>


    //Sign Up Page P4

    <string name="textView_UploadProfilePicture_P4">Chose A Profile Picture :</string>
    <string name="uploadButton_P4">Upload Image</string>
    <string name="finishButton_P4">FINISH</string>


    <string name="title_logout">Log Out</string>
    <string name="title_Settings">Settings</string>
    <string name="title_userSearch">Find Users</string>
    <string name="title_home">Profile</string>
    <string name="title_camera">Post</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="user_bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fermentum ante sed lorem laoreet, non viverra urna consequat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin vel egestas sapien. Morbi metus.</string>
    <string name="tab_posts">Posts</string>
    <string name="tab_bookmarks">Bookmarks</string>
    <string name="tab_bio">Bio</string>
    <string name="btn_follow">Follow</string>
    <string name="btn_following">Following</string>
    <string name="pfp_description">Profile Picture</string>


    //Detailed Post Page
    <string name="post_timestamp">15:26 3/5/2020</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="action_settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="edit_Profile">Edit Profile</string>
    <string name="help_support">Help and Support</string>
    <string name="account_privacy">Account Privacy</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="advance_setting">Advance Settings</string>


    <string name="key_edit_profile">key_edit_profile</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Pictures</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify image quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">This is an App that has for goal of implementing 5 main features. Zuccstagram was born trough a SOEN 341 project made by 6 people, bla bla bla, bla bla bla...</string>
    <string name="app_version">1.2</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Zuccstagram Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound_message">New message notification</string>
    <string name="title_new_notification_sound_comment">New comment notification</string>
    <string name="title_new_notification_sound_Like">New like notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="notifications_new_comment">notifications_new_comment</string>
    <string name="notifications_new_like">notifications_new_like</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="saveButton_EP">SAVE</string>
    <string name="navigation_following">Following</string>


    // confirmation Check Up
    <string name="wrong_FirstName">Invalid First Name</string>
    <string name="wrong_LastName">Invalid Last Name</string>
    <string name="wrong_Username">Invalid Username</string>
    <string name="invalid_Email">Invalid Email</string>
    <string name="used_Email">This email has already been used. Please enter a new one.</string>
    <string name="wrong_ConfirmationEmail">Incorrect Confirmation Email</string>
    <string name="wrong_Password">Invalid or Already In Used Password. 8 Characters Minimum</string>
    <string name="wrong_ConfirmationPassword">Invalid Confirmation Password</string>
    <string name="wrong_Bio">Invalid Bio</string>
    <string name="wrong_SecurityQuestion">Invalid Security Question</string>
    <string name="wrong_SecurityQuestionAnswer">Invalid Security Answer</string>


</resources>