<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn_SignUp.LogIn_SignUp_Main">



    <include

        android:id="@+id/toolbar_LogIn_SignUp"
        layout="@layout/toolbar_login_signin" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="191dp"
        android:layout_height="40dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="424dp"
        android:text="@string/logInButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_LogIn_SignUp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="56dp"
        android:text="@string/signUpButton"
        app:layout_constraintStart_toStartOf="@+id/logInButton"
        app:layout_constraintTop_toBottomOf="@+id/logInButton" />

    <EditText
        android:id="@+id/editText_Email"
        android:layout_width="245dp"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/editText_hint_Email"
        android:inputType="textPersonName"
        android:text="@string/editText_Email"
        app:layout_constraintStart_toStartOf="@+id/textView_Email"
        app:layout_constraintTop_toBottomOf="@+id/textView_Email" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="245dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/editText_hint_Password"
        android:inputType="textPassword"
        android:text="@string/editText_Password"
        app:layout_constraintStart_toStartOf="@+id/textView_Email"
        app:layout_constraintTop_toBottomOf="@+id/textView_Password" />

    <TextView
        android:id="@+id/textView_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="252dp"
        android:text="@string/textView_Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_LogIn_SignUp" />

    <TextView
        android:id="@+id/textView_Password"
        android:layout_width="74dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/textView_Password"
        app:layout_constraintStart_toStartOf="@+id/textView_Email"
        app:layout_constraintTop_toBottomOf="@+id/editText_Email" />

    <TextView
        android:id="@+id/textView_title_Zuccstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="52dp"
        android:text="@string/textView_title_Zuccstagram"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_LogIn_SignUp" />

    <ImageView
        android:id="@+id/zuccstagram_Logo"
        android:layout_width="139dp"
        android:layout_height="111dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/textView_title_Zuccstagram"
        app:layout_constraintTop_toBottomOf="@+id/textView_title_Zuccstagram"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView_Forgot_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/textView_ForgotPassword"
        android:textColor="#FF0000"
        app:layout_constraintStart_toStartOf="@+id/logInButton"
        app:layout_constraintTop_toBottomOf="@+id/logInButton" />


</androidx.constraintlayout.widget.ConstraintLayout>