<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn_SignUp.ResetPasswordActivity">


    <include

        android:id="@+id/toolbar_LogIn_SignUp"
        layout="@layout/toolbar_login_signin" />

    <TextView
        android:id="@+id/textView_ResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textView_ResetPassword"
        app:layout_constraintStart_toStartOf="@+id/editText_Email_RP"
        app:layout_constraintTop_toBottomOf="@+id/editText_Email_RP" />

    <EditText
        android:id="@+id/editText_Email_RP"
        android:layout_width="303dp"
        android:layout_height="58dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:hint="@string/textView_Hint_ResetPassword"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_LogIn_SignUp" />

    <TextView
        android:id="@+id/textView_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/textView_Email_ResetPassword"
        app:layout_constraintBottom_toTopOf="@+id/editText_Email_RP"
        app:layout_constraintStart_toStartOf="@+id/editText_Email_RP" />

    <Button
        android:id="@+id/button_SendResettingPassword"
        android:layout_width="236dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:text="@string/Button_Email_ResetPassword"
        app:layout_constraintStart_toStartOf="@+id/editText_Email_RP"
        app:layout_constraintTop_toBottomOf="@+id/editText_Email_RP" />


</androidx.constraintlayout.widget.ConstraintLayout>